RESOLVED FIXED314762
[WGSL] shader,validation,expression,binary,short_circuiting_and_or:* is failing
https://bugs.webkit.org/show_bug.cgi?id=314762
Summary [WGSL] shader,validation,expression,binary,short_circuiting_and_or:* is failing
Tadeu Zagallo
Reported 2026-05-13 15:17:26 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-13 15:17:35 PDT
Tadeu Zagallo
Comment 2 2026-05-13 15:22:50 PDT
EWS
Comment 3 2026-05-19 00:18:00 PDT
Committed 313467@main (52b6ed671657): <https://commits.webkit.org/313467@main> Reviewed commits have been landed. Closing PR #64875 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.