[WGSL] shader,validation,expression,binary,short_circuiting_and_or:* is failing https://bugs.webkit.org/show_bug.cgi?id=314762 rdar://177012957

Reviewed by Mike Wyrzykowski.

Add support for short-circuiting logical operators at constant and
override evaluation times.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/binary/short_circuiting_and_or-expected.txt:
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::getPacking):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::binaryExpression):
(WGSL::TypeChecker::convertValue):
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::evaluate):

Canonical link: https://commits.webkit.org/313467@main