Source/WebGPU/WGSL/TypeCheck.cpp
@@ -263,6 +263,7 @@ private:
     std::optional<Evaluation> m_currentEvaluation { std::nullopt };
     Evaluation m_maxEvaluation { Evaluation::Runtime };
     DiscardResult m_discardResult { DiscardResult::No };
+    bool m_suppressConstantErrors { false };
 
     TypeStore& m_types;
     Vector<BreakTarget> m_breakTargetStack;
@@ -1345,6 +1346,30 @@ Result<void> TypeChecker::visit(AST::BinaryExpression& binary)
 
 Result<void> TypeChecker::binaryExpression(const SourceSpan& span, AST::Expression* expression, AST::BinaryOperation operation, AST::Expression& leftExpression, AST::Expression& rightExpression)
 {
+    if (operation == AST::BinaryOperation::ShortCircuitAnd || operation == AST::BinaryOperation::ShortCircuitOr) {
+        UNWRAP(lhsType, infer(leftExpression, m_maxEvaluation));
+        if (lhsType == m_types.boolType()) {
+            if (auto lhsValue = leftExpression.constantValue()) {
+                bool lhsBool = std::get<bool>(*lhsValue);
+                bool shortCircuits = (operation == AST::BinaryOperation::ShortCircuitAnd && !lhsBool)
+                    || (operation == AST::BinaryOperation::ShortCircuitOr && lhsBool);
+                if (shortCircuits) {
+                    auto suppressScope = SetForScope(m_suppressConstantErrors, true);
+                    UNWRAP(rhsType, infer(rightExpression, m_maxEvaluation));
+                    if (auto* reference = std::get_if<Types::Reference>(rhsType))
+                        rhsType = reference->element;
+                    if (rhsType != m_types.boolType())
+                        TYPE_ERROR(span, "no matching overload for operator "_s, toASCIILiteral(operation), '(', *lhsType, ", "_s, *rhsType, ')');
+                    inferred(m_types.boolType());
+                    evaluated(leftExpression.evaluation());
+                    if (expression)
+                        expression->setConstantValue(operation == AST::BinaryOperation::ShortCircuitAnd ? false : true);
+                    return { };
+                }
+            }
+        }
+    }
+
     CHECK(chooseOverload("operator"_s, span, expression, toASCIILiteral(operation), ReferenceWrapperVector<AST::Expression, 2> { leftExpression, rightExpression }, { }));
 
     ASCIILiteral operationName;
@@ -2155,8 +2180,10 @@ Result<const Type*> TypeChecker::chooseOverload(ASCIILiteral kind, const SourceS
         }
 
         auto constantFunction = overload->constantFunction;
-        if (!constantFunction && m_maxEvaluation < Evaluation::Runtime) [[unlikely]]
-            TYPE_ERROR(span, "cannot call function from "_s, evaluationToString(m_maxEvaluation), " context"_s);
+        if (!constantFunction && m_maxEvaluation < Evaluation::Runtime) [[unlikely]] {
+            if (!m_suppressConstantErrors)
+                TYPE_ERROR(span, "cannot call function from "_s, evaluationToString(m_maxEvaluation), " context"_s);
+        }
 
         if (!constantFunction)
             evaluation = Evaluation::Runtime;
@@ -2164,9 +2191,10 @@ Result<const Type*> TypeChecker::chooseOverload(ASCIILiteral kind, const SourceS
 
         if (isConstant && constantFunction) {
             auto result = constantFunction(selectedOverload->result, WTF::move(arguments));
-            if (!result) [[unlikely]]
-                TYPE_ERROR(span, result.error());
-            if (expression)
+            if (!result) [[unlikely]] {
+                if (!m_suppressConstantErrors)
+                    TYPE_ERROR(span, result.error());
+            } else if (expression)
                 CHECK(setConstantValue(*expression, selectedOverload->result, WTF::move(*result)));
         } else if (auto* validate = overload->validationFunction) {
             if (auto error = validate(WTF::move(validationArguments)))
@@ -2521,6 +2549,10 @@ Result<void> TypeChecker::convertValue(const SourceSpan& span, const Type* type,
     }
 
     if (!convertValueImpl(span, type, *value)) [[unlikely]] {
+        if (m_suppressConstantErrors) {
+            value = std::nullopt;
+            return { };
+        }
         StringPrintStream valueString;
         value->dump(valueString);
         TYPE_ERROR(span, "value "_s, valueString.toString(), " cannot be represented as '"_s, *type, '\'');
